refactor(core, tests): cleanup redundant code and improve test cases
- Unified `Collectors.toList()` calls to `toList()`.
- Simplified `StringBuilder` operations with `isEmpty()` checks.
- Expanded CLI argument aliases for inclusivity (`--include`, `--exclude`).
- Eliminated unused `priority()` overrides in extractors.
- Refactored `ConfigLoader`, subclassing YAML/JSON parsing.
- Added paired and cascade exclusions to `OutputBuilder`.
- Introduced per-key negative assertions in `YmlParityTest` cases.
- Updated assertions in tests for readability (`isEqualTo(0)` → `isZero()`).