@@ -3,11 +3,8 @@ package io.guessit.engine;
 import org.junit.jupiter.api.Test;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertThrows;
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.*;
 
 class MatchSetTest {
 
@@ -24,9 +21,9 @@ class MatchSetTest {
         var s = new MatchSet();
         s.add(Match.of("year", 2020, 0, 4, "2020"));
         s.add(Match.of("source", "BluRay", 5, 11, "BluRay"));
-        var years = s.named("year").collect(Collectors.toList());
+        var years = s.named("year").toList();
         assertEquals(1, years.size());
-        assertEquals(2020, years.get(0).value());
+        assertEquals(2020, years.getFirst().value());
     }
 
     @Test
@@ -35,9 +32,9 @@ class MatchSetTest {
         var a = Match.of("year", 2020, 0, 4, "2020");
         var b = Match.of("season", 20, 1, 3, "20");
         s.add(a); s.add(b);
-        var overs = s.overlapping(0, 5).collect(Collectors.toList());
+        var overs = s.overlapping(0, 5).toList();
         assertEquals(2, overs.size());
-        var nonOver = s.overlapping(10, 20).collect(Collectors.toList());
+        var nonOver = s.overlapping(10, 20).toList();
         assertTrue(nonOver.isEmpty());
     }
 
@@ -47,9 +44,9 @@ class MatchSetTest {
         var marker = new Marker("path", 0, 10, "abcdefghij");
         s.add(Match.of("year", 2020, 0, 4, "2020"));
         s.add(Match.of("year", 1999, 12, 16, "1999"));
-        var inside = s.inMarker(marker).collect(Collectors.toList());
+        var inside = s.inMarker(marker).toList();
         assertEquals(1, inside.size());
-        assertEquals(2020, inside.get(0).value());
+        assertEquals(2020, inside.getFirst().value());
     }
 
     @Test
@@ -59,7 +56,7 @@ class MatchSetTest {
         var b = Match.of("year", 1999, 0, 4, "1999");
         s.add(a);
         s.replace(a, b);
-        assertEquals(List.of(b), s.all().collect(Collectors.toList()));
+        assertEquals(List.of(b), s.all().toList());
         s.remove(b);
         assertEquals(0, s.all().count());
     }
@@ -70,7 +67,7 @@ class MatchSetTest {
         set.add(Match.of("a", 1, 0, 5, "00000"));
         set.add(Match.of("b", 2, 6, 10, "1111"));
         set.add(Match.of("c", 3, 11, 15, "2222"));
-        var inRange = set.range(0, 10, m -> true).toList();
+        var inRange = set.range(0, 10, _ -> true).toList();
         assertEquals(2, inRange.size());
         assertEquals("a", inRange.get(0).name());
         assertEquals("b", inRange.get(1).name());
