@@ -5,7 +5,6 @@ import org.junit.jupiter.api.Test;
 import java.util.List;
 import java.util.Set;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
@@ -17,8 +16,8 @@ class PatternMatcherTest {
         var p = Pattern.compile("\\b(?<value>\\d{4})\\b");
         var matches = PatternMatcher.regex("Movie 1999 Sequel 2020", p, "year", RegexOpts.defaults());
         assertEquals(2, matches.size());
-        assertEquals("1999", matches.get(0).raw());
-        assertEquals("1999", matches.get(0).value());
+        assertEquals("1999", matches.getFirst().raw());
+        assertEquals("1999", matches.getFirst().value());
     }
 
     @Test
@@ -27,7 +26,7 @@ class PatternMatcherTest {
         var opts = RegexOpts.defaults().withValue(Integer::parseInt);
         var matches = PatternMatcher.regex("year 2020", p, "year", opts);
         assertEquals(1, matches.size());
-        assertEquals(2020, matches.get(0).value());
+        assertEquals(2020, matches.getFirst().value());
     }
 
     @Test
@@ -35,22 +34,22 @@ class PatternMatcherTest {
         var p = Pattern.compile("\\bBluRay\\b");
         var matches = PatternMatcher.regex("ALPHA.BluRay.x264", p, "source", RegexOpts.defaults());
         assertEquals(1, matches.size());
-        assertEquals("BluRay", matches.get(0).raw());
-        assertEquals("BluRay", matches.get(0).value());
+        assertEquals("BluRay", matches.getFirst().raw());
+        assertEquals("BluRay", matches.getFirst().value());
     }
 
     @Test
     void stringMatchesNeedles() {
         var matches = PatternMatcher.string("Foo.AAC.x264.AAC.mkv", Set.of("AAC"), "audio_codec", StringOpts.defaults());
         assertEquals(2, matches.size());
-        assertEquals(List.of(4, 13), matches.stream().map(Match::start).collect(Collectors.toList()));
+        assertEquals(List.of(4, 13), matches.stream().map(Match::start).toList());
     }
 
     @Test
     void stringWholeWord() {
         var matches = PatternMatcher.string("hauac.AAC.mkv", Set.of("AAC"), "x", StringOpts.defaults());
         assertEquals(1, matches.size());
-        assertEquals(6, matches.get(0).start());
+        assertEquals(6, matches.getFirst().start());
     }
 
     @Test
@@ -58,7 +57,7 @@ class PatternMatcherTest {
         var matches = PatternMatcher.string("Foo.aac.AAC.mkv", Set.of("AAC"), "x",
             StringOpts.defaults().caseSensitive(true));
         assertEquals(1, matches.size());
-        assertEquals(8, matches.get(0).start());
+        assertEquals(8, matches.getFirst().start());
     }
 
     @Test void regex_validatorRejectsMatch() {
@@ -75,7 +74,7 @@ class PatternMatcherTest {
         var opts = RegexOpts.defaults().withValidator(Validators.sepsSurround(input));
         var matches = PatternMatcher.regex(input, p, "screen_size", opts);
         assertEquals(1, matches.size());
-        assertEquals("1080", matches.get(0).raw());
+        assertEquals("1080", matches.getFirst().raw());
     }
 
     @Test void string_validatorRejectsMatch() {
